<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">


    <LinearLayout
        android:id="@+id/insuranceListItem"
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:weightSum="10"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">


        <TextView

            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20dp"
            android:text="@string/company"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/period"
            android:textSize="12dp"
            android:layout_weight="2"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="20dp"
            android:textColor="#2F9C33"
            android:padding="8dp"
            android:text="@string/price"
            android:layout_weight="4"
            />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>